array list added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 <body>
     <h1><marquee scrollamount="10">Friends Name List Using An Array</marquee></h1>
     <div class="container-frd"> </div>
+    <script>
+        const friends = ["Saish","Shraddha","Rupali","Sharvi","Kunal","Onkar"];
+    </script>
 </body>
 </html>
